fix: Fix banner overflow and carousel drag and drop

--- a/src/components/banner/Banner.styles.scss
+++ b/src/components/banner/Banner.styles.scss
@@ -7,6 +7,12 @@
   * {
     max-height: spacing.$unit30;
   }
+
+  & > div {
+    overflow-x: hidden;
+  }
+
+  clip-path: ellipse(100% 100% at 15% 7.5%);
 }
 
 .banner__slide {
