--- a/src/components/navBar/navMenu/NavMenu.styles.scss
+++ b/src/components/navBar/navMenu/NavMenu.styles.scss
@@ -10,6 +10,7 @@
   width: 100vw;
   background-color: palette.$grey;
   @include spacing.padding_content();
+  clip-path: ellipse(100% 100% at 15% 7.5%);
 
   ul {
     display: flex;
